#
# Copyright 2001,2006 Free Software Foundation, Inc.
# 
# This file is part of GNU Radio
# 
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
# 
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
# 

include $(top_srcdir)/Makefile.common

# Install m4 macros in this directory
m4datadir = $(datadir)/aclocal

# List your m4 macros here
m4macros = \
	acx_pthread.m4 \
	bnv_have_qt.m4 \
	cppunit.m4 \
	gr_boost.m4 \
	grc_build.m4 \
	grc_gnuradio_core.m4 \
	grc_gnuradio_examples.m4 \
	grc_gr_atsc.m4 \
	grc_gr_audio_alsa.m4 \
	grc_gr_audio_jack.m4 \
	grc_gr_audio_oss.m4 \
	grc_gr_audio_osx.m4 \
	grc_gr_audio_portaudio.m4 \
	grc_gr_audio_windows.m4 \
	grc_gr_comedi.m4 \
	grc_gr_error_correcting_codes.m4 \
	grc_gr_gsm_fr_vocoder.m4 \
	grc_gr_radar_mono.m4 \
	grc_gr_radio_astronomy.m4 \
	grc_gr_rdf.m4 \
	grc_gr_sounder.m4 \
	grc_gr_trellis.m4 \
	grc_gr_usrp.m4 \
	grc_gr_video_sdl.m4 \
	grc_gr_wxgui.m4 \
	grc_mblock.m4 \
	gr_check_createfilemapping.m4 \
	gr_check_mc4020.m4 \
	gr_check_shm_open.m4 \
	gr_check_usrp.m4 \
	grc_pmt.m4 \
	grc_usrp.m4 \
	gr_doxygen.m4 \
	gr_fortran.m4 \
	gr_gprof.m4 \
	gr_libgnuradio_core_extra_ldflags.m4 \
	gr_no_undefined.m4 \
	gr_omnithread.m4 \
	gr_pwin32.m4 \
	gr_python.m4 \
	gr_require_mc4020.m4 \
	gr_scripting.m4 \
	gr_set_md_cpu.m4 \
	gr_swig.m4 \
	gr_sysv_shm.m4 \
	gr_x86_64.m4 \
	lf_cc.m4 \
	lf_cxx.m4 \
	lf_warnings.m4 \
	lf_x11.m4 \
	macosx_audiounit.m4 \
	mkstemp.m4 \
	onceonly.m4 \
	pkg.m4 \
	sdl.m4 \
	usrp_fusb_tech.m4 \
	usrp_libusb.m4 \
	usrp_sdcc.m4

EXTRA_DIST = $(m4macros) 
