#
# Copyright 2001,2006,2008,2009,2010 Free Software Foundation, Inc.
# 
# This file is part of GNU Radio
# 
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
# 
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
# 

include $(top_srcdir)/Makefile.common

# Install m4 macros in this directory
m4datadir = $(datadir)/aclocal

# List your m4 macros here
m4macros = \
	acx_cblas.m4 \
	acx_pthread.m4 \
	ax_boost_base.m4 \
	ax_boost_date_time.m4 \
	ax_boost_filesystem.m4 \
	ax_boost_iostreams.m4 \
	ax_boost_program_options.m4 \
	ax_boost_python.m4 \
	ax_boost_regex.m4 \
	ax_boost_serialization.m4 \
	ax_boost_signals.m4 \
	ax_boost_system.m4 \
	ax_boost_test_exec_monitor.m4 \
	ax_boost_thread.m4 \
	ax_boost_unit_test_framework.m4 \
	ax_boost_wserialization.m4 \
	bnv_have_qt.m4 \
	cppunit.m4 \
	grc_build.m4 \
	grc_docs.m4 \
	grc_gnuradio_core.m4 \
	grc_gnuradio_examples.m4 \
	grc_grc.m4 \
	grc_gr_atsc.m4 \
	grc_gr_audio.m4 \
	grc_gr_comedi.m4 \
	grc_gr_fcd.m4 \
	grc_gr_noaa.m4 \
	grc_gr_trellis.m4 \
	grc_gr_video_sdl.m4 \
	grc_gr_vocoder.m4 \
	grc_gr_wxgui.m4 \
	grc_gruel.m4 \
	gr_check_createfilemapping.m4 \
	gr_check_mc4020.m4 \
	gr_check_shm_open.m4 \
	gr_doxygen.m4 \
	gr_fortran.m4 \
	gr_git.m4 \
	gr_gprof.m4 \
	gr_lib64.m4 \
	gr_libgnuradio_core_extra_ldflags.m4 \
	gr_no_undefined.m4 \
	gr_pwin32.m4 \
	gr_python.m4 \
	gr_require_mc4020.m4 \
	gr_scripting.m4 \
	gr_set_md_cpu.m4 \
	gr_subversion.m4 \
	gr_swig.m4 \
	gr_sysv_shm.m4 \
	gr_version.m4 \
	gr_vmcircbuf.m4 \
	lf_cc.m4 \
	lf_cxx.m4 \
	lf_warnings.m4 \
	lf_x11.m4 \
	macosx_audiounit.m4 \
	mkstemp.m4 \
	onceonly.m4 \
	pkg.m4 \
	sdl.m4

EXTRA_DIST += $(m4macros)
